crates/pgt_pretty_print/tests/snapshots/single/tests__call_stmt_0_60.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
input_file: crates/pgt_pretty_print/tests/data/single/call_stmt_0_60.sql
snapshot_kind: text
---
CALL my_procedure('test', 123);
