crates/pgt_pretty_print/tests/snapshots/single/tests__close_portal_stmt_0_60.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
input_file: crates/pgt_pretty_print/tests/data/single/close_portal_stmt_0_60.sql
snapshot_kind: text
---
CLOSE mycursor;
