crates/pgt_pretty_print/tests/snapshots/single/tests__coerce_via_io_0_60.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
input_file: crates/pgt_pretty_print/tests/data/single/coerce_via_io_0_60.sql
snapshot_kind: text
---
SELECT CAST('123' AS INT);
