crates/pgt_pretty_print/tests/snapshots/single/tests__comment_stmt_0_60.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
input_file: crates/pgt_pretty_print/tests/data/single/comment_stmt_0_60.sql
snapshot_kind: text
---
COMMENT ON TABLE customers IS 'Customer information';
