crates/pgt_pretty_print/tests/snapshots/single/tests__complex_select_part_1_60.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
input_file: crates/pgt_pretty_print/tests/data/single/complex_select_part_1_60.sql
snapshot_kind: text
---
SELECT
  c.oid AS "view_id",
  n.nspname AS "view_schema",
  c.relname AS "view_name",
  r.ev_action AS "view_definition"
FROM
  pg_class AS c
  INNER JOIN pg_namespace AS n
  ON n.oid = c.relnamespace
  INNER JOIN pg_rewrite AS r
  ON r.ev_class = c.oid
WHERE c.relkind IN ('v',
'm');
