crates/pgt_pretty_print/tests/snapshots/single/tests__complex_select_part_3_60.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
input_file: crates/pgt_pretty_print/tests/data/complex_select_part_3_60.sql
snapshot_kind: text
---
SELECT
  view_id,
  view_schema,
  view_name,
  json_array_elements(
    view_definition -> 0 -> 'targetList'
  ) AS entry
FROM
  transform_json;
