crates/pgt_pretty_print/tests/snapshots/single/tests__complex_select_part_4_60.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
input_file: crates/pgt_pretty_print/tests/data/complex_select_part_4_60.sql
snapshot_kind: text
---
SELECT
  view_id,
  view_schema,
  view_name,
  (entry ->> 'resno')::pg_catalog.int4 AS view_column,
  (entry ->> 'resorigtbl')::oid AS resorigtbl,
  (entry ->> 'resorigcol')::pg_catalog.int4 AS resorigcol
FROM
  target_entries;
